--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -1,6 +1,5 @@
 :root {
-    --mainEng-font: "Playfair Display";
-    /* --mainEng-font: "Poppins"; */
+    --mainEng-font: "Noto Sans";
     --mainKorT-font: 'Pretendard-Thin';
     --mainNum-font: "EB Garamond";
 
