--- a/src/css/pages/footer.css
+++ b/src/css/pages/footer.css
@@ -1,3 +1,49 @@
 #footer {
+  position: relative;
+  overflow: hidden;
   height: 50vh;
+  border: 1px solid #0f0;
+}
+#footer .stage {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 2rem;
+  text-align: center;
+  white-space: nowrap;
+}
+#footer .stage .desc {
+  perspective: 400px;
+}
+#footer .stage .desc div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#footer .splide {
+  position: absolute;
+  top: 0;
+  border: 1px solid #000;
+}
+#footer .footer__splide__track .splide__list {
+  display: flex;
+}
+#footer .footer__splide__track .splide__list img {
+  width: 4vw;
+}
+#footer .footer__splide__track .splide__list .splide__slide {
+  color: #fff;
+  padding: 10px;
+  font-size: 2vw;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  padding: 10px 20px;
+}
+#footer .footer__splide__track .splide__list .splide__slide.is-active {
+  color: rgb(255, 196, 0);
 }
