--- a/src/css/pages/header.css
+++ b/src/css/pages/header.css
@@ -5,6 +5,7 @@
   z-index: 999;
   width: 100%;
   font-family: var(--mainEng-font);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 #header .header_inner {
   display: flex;
@@ -31,6 +32,9 @@
 }
 #header .header_inner .header_logo li.intro_logo {
   display: block;
+}
+#header .header_inner .header_nav {
+  margin-right: 50px;
 }
 #header .header_inner .header_nav li {
   display: inline-block;
@@ -61,7 +65,7 @@
   transform: scaleX(1);
 }
 #header .header_inner .header_nav_mobile {
-  display: none;
+  opacity: 0;
   width: 40px;
   height: 40px;
   cursor: pointer;
@@ -104,8 +108,7 @@
     position: absolute;
     right: 0;
     top: 68px;
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid #f00;
+    background: var(--mainColor100-color);
     z-index: 999;
     min-width: 150px;
     padding: 20px 10px;
@@ -125,6 +128,6 @@
     padding: 10px;
   }
   #header .header_inner .header_nav_mobile {
-    display: block;
+    opacity: 1;
   }
 }
