--- a/src/css/pages/project.css
+++ b/src/css/pages/project.css
@@ -1,115 +1,93 @@
-#project .projectSwiper {
-  position: absolute;
-  left: 50%;
-  top: 30%;
-  transform: translateX(-50%);
-  height: 400px;
-  overflow: visible;
+#project {
+  display: flex;
+  justify-content: space-between;
 }
-#project .projectSwiper .swiper-slide {
+#project .tabs {
   position: relative;
-  height: 100%;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
+  width: 33.333%;
 }
-#project .projectSwiper .swiper-slide img {
+#project .tabs .tab-menu {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+#project .tabs .tab-menu li a {
   display: block;
+  width: 200px;
+  padding: 20px;
+  font-size: 38px;
+  -webkit-text-stroke: 0.5px #ffffff;
+  color: transparent;
+  letter-spacing: 1px;
+  transition: 0.5s;
+  text-transform: capitalize;
+  cursor: pointer;
+  white-space: nowrap;
+}
+#project .tabs .tab-menu li a.on {
+  font-size: 48px;
+  color: #ffffff;
+  font-weight: bold;
+}
+#project .hSwiper {
+  position: relative;
+  width: 33.333%;
+  height: 100vh;
+  overflow: hidden;
+}
+#project .hSwiper .project {
+  position: absolute;
+  bottom: 15%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 450px;
+  overflow: hidden;
+}
+#project .hSwiper .project img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
-#project .projectSwiper .swiper-slide .project_title {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  position: absolute;
-  top: -10%;
-}
-#project .projectSwiper .swiper-slide .project_title .num {
-  font-family: var(--mainNum-font);
-  font-weight: 600;
-  opacity: 0.4;
-  font-size: 22px;
-}
-#project .projectSwiper .swiper-slide .project_title p {
-  opacity: 0;
-  font-family: var(--mainEng-font);
-  text-transform: capitalize;
-  font-size: 24px;
-  font-weight: 600;
-  padding: 5px 0;
-  transition: 0.35s;
-}
-#project .projectSwiper .swiper-slide:hover .project_title p {
-  opacity: 1;
-}
-#project .projectSwiper .swiper-slide .project_detail {
-  position: absolute;
-  bottom: -50px;
-  left: -50px;
+#project #vslide {
+  width: 33.333%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: var(--mainEng-font);
-  background-color: var(--mainColor100-color);
-  width: 100px;
-  height: 100px;
-  text-align: center;
-  border-radius: 50%;
 }
-#project .projectSwiper .swiper-slide .project_date {
-  position: absolute;
-  right: 5px;
-  bottom: -25px;
-  font-size: var(--font-size-EngST1-P);
+#project #vslide .vSwiper {
+  height: 50vh;
+  overflow: hidden;
 }
-#project .swiper-button-prev {
-  color: var(--white);
-  padding: 0 20px;
+#project #vslide .vSwiper .swiper-slide {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
-#project .swiper-button-next {
-  color: var(--white);
-  padding: 0 20px;
+#project #vslide .vSwiper .swiper-slide h2 {
+  font-family: NotoSansKR-Medium;
+  font-size: 52px;
+  font-weight: 500;
+  line-height: 54px;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin-top: 100px;
+  -webkit-text-stroke: 1px #fff;
+  color: transparent;
 }
-
-@media (max-width: 767px) {
-  .projectSwiper {
-    width: 60%;
-  }
-  .project_title h2 {
-    font-size: var(--font-size-Num1-M);
-  }
-  .project_title P {
-    font-size: var(--font-size-EngT1-M);
-  }
+#project #vslide .vSwiper .swiper-slide .project_desc li {
+  display: inline-block;
+  font-size: 24px;
+  font-weight: 600;
+  padding: 10px 0;
 }
-@media (min-width: 768px) {
-  .projectSwiper {
-    width: 70%;
-  }
-  .projectSwiper .swiper-slide:nth-child(odd) {
-    top: 0;
-    transition: 0.35s;
-  }
-  .projectSwiper .swiper-slide:nth-child(even) {
-    top: 100px;
-    transition: 0.35s;
-  }
-  .projectSwiper .swiper-slide:hover.swiper-slide:nth-child(odd) {
-    top: 50px;
-  }
-  .projectSwiper .swiper-slide:hover.swiper-slide:nth-child(even) {
-    top: 150px;
-  }
-  .project_title h2 {
-    font-size: var(--font-size-Num1-P);
-  }
-  .project_title P {
-    font-size: var(--font-size-EngT1-P);
-  }
+#project #vslide .vSwiper .swiper-slide h3 {
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 54px;
+  letter-spacing: 1px;
 }
-@media (min-width: 1024px) {
-  .projectSwiper {
-    width: 80%;
-  }
+#project #vslide .vSwiper .swiper-slide p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.5;
 }
