--- a/src/css/pages/scss/about.scss
+++ b/src/css/pages/scss/about.scss
@@ -1,80 +1,116 @@
 #about {
+    height: 400vh;
+    overflow: visible;
 
-    .about_box {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .about_left {
+    .about_wrap {
         position: relative;
+        display: flex;
+        margin: auto;
+        width: 95%;
+        height: auto;
 
-        .about_box {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
+        & * {
+            word-break: keep-all
+        }
 
-            .about_photo {
-                background-color: rgba(255, 255, 255, .5);
-            }
+        /* left_tit */
+        .txt {
+            position: sticky;
+            left: 100px;
+            top: 20%;
+            width: 50%;
+            height: 100%;
+            display: flex;
+            margin-bottom: 300px;
 
-            .about_desc {
-                position: absolute;
-                left: 0%;
-                bottom: -80px;
-                line-height: 1.5;
+            ul {
+                margin-top: 30px;
 
-                h2 {
-                    font-family: var(--mainKorM-font);
+                li {
+                    position: relative;
+                    font-size: 22px;
+                    font-weight: 700;
+                    transition: all .3s;
+                    margin-top: 20px;
+                    color: rgba(255, 255, 255, .5);
+                    text-transform: capitalize;
+
+                    &.on {
+                        padding-left: 40px;
+                        color: #ffffff;
+                        transition: all .3s
+                    }
                 }
 
-                p {
-                    font-family: var(--mainKorL-font);
+                .item01.on:after {
+                    content: "01.";
+                    position: absolute;
+                    top: 50%;
+                    left: 0px;
+                    transform: translateY(-50%);
                 }
 
+                .item02.on:after {
+                    content: "02.";
+                    position: absolute;
+                    top: 50%;
+                    left: 0px;
+                    transform: translateY(-50%)
+                }
+
+                .item03.on:after {
+                    content: "03.";
+                    position: absolute;
+                    top: 50%;
+                    left: 0px;
+                    transform: translateY(-50%)
+                }
+
+                .item04.on:after {
+                    content: "04.";
+                    position: absolute;
+                    top: 50%;
+                    left: 0px;
+                    transform: translateY(-50%)
+                }
             }
         }
-    }
 
-    .about_right {
-        position: relative;
-        margin: auto;
-        overflow: hidden;
+        /* right_cont */
+        .cont {
+            width: 50%;
 
-        .aboutSwiper {
-            width: 100%;
-            height: 100%;
-            overflow: visible;
+            >li {
+                position: relative;
+                height: 100vh;
 
-            &::after {
-                content: '';
-                width: 1px;
-                height: 500px;
-                position: absolute;
-                left: 0;
-                top: 50%;
-                transform: translateY(-50%);
-                background: repeating-linear-gradient(to bottom,
-                        /* 방향 */
-                        transparent 0,
-                        /* 투명 시작 */
-                        transparent 5px,
-                        /* 투명 길이 */
-                        rgba(4, 107, 169, .5) 0px,
-                        /* 선 색상 시작 */
-                        rgba(4, 107, 169, .5) 15px
-                        /* 선 색상 길이 */
-                    );
-            }
-
-            .swiper-slide {
-                width: 100%;
-                height: 100%;
+                &::after {
+                    content: '';
+                    width: 1px;
+                    height: 98%;
+                    position: absolute;
+                    left: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    background: repeating-linear-gradient(to bottom,
+                            /* 방향 */
+                            transparent 0,
+                            /* 투명 시작 */
+                            transparent 5px,
+                            /* 투명 길이 */
+                            rgba(4, 107, 169, .2) 0px,
+                            /* 선 색상 시작 */
+                            rgba(4, 107, 169, .2) 15px
+                            /* 선 색상 길이 */
+                        );
+                }
 
                 .about_title {
                     position: absolute;
+                    left: 20%;
+                    top: 30%;
                     font-family: var(--mainEng-font);
+                    font-size: var(--font-size-EngT1-P);
                     text-transform: capitalize;
                     font-style: italic;
                     font-weight: 700;
@@ -90,311 +126,28 @@
                     }
                 }
 
-                .about_line {
-                    padding: 100px 0 150px 0;
+                .img {
+                    width: 100%;
                     position: absolute;
                     left: -6px;
-                    top: 50%;
-                    transform: translateY(-50%);
-
-                    &::after {
-                        content: '';
-                        width: 10px;
-                        height: 10px;
-                        border-radius: 50%;
-                        border: 1px solid rgba(255, 255, 255, .3);
-                        position: absolute;
-                        left: 0;
-                        top: 0;
-                    }
-
-                    &::before {
-                        content: '';
-                        width: 10px;
-                        height: 10px;
-                        border-radius: 50%;
-                        border: 1px solid rgba(255, 255, 255, .3);
-                        position: absolute;
-                        left: 0;
-                        bottom: 0;
-                    }
+                    top: 40%;
                 }
 
-                .about_sub-title {
+                .txt_container {
+                    width: 70%;
                     position: absolute;
-                    font-family: var(--mainKorL-font);
-                    font-size: var(--font-size-KorST3);
-                    font-weight: 300;
-
-                }
-            }
-        }
-
-        .swiper-button-prev {
-            position: absolute;
-            border: 1px solid rgba(255, 255, 255, .5);
-            border-radius: 50%;
-            transform: rotate(90deg);
-
-            &::after {
-                font-size: 15px;
-                color: rgba(255, 255, 255, .5);
-            }
-        }
-
-        .swiper-button-next {
-            position: absolute;
-            border: 1px solid rgba(255, 255, 255, .5);
-            border-radius: 50%;
-            transform: rotate(90deg);
-
-            &::after {
-                font-size: 15px;
-                color: rgba(255, 255, 255, .5);
-            }
-        }
-
-    }
-
-}
-
-@media (max-width:767px) {
-    #about {
-
-        .about_left {
-            display: none;
-        }
-
-        .about_right {
-            width: 95%;
-            height: 100vh;
-
-            #aboutSwiper-box {
-                width: 100%;
-                margin-left: 50px;
-                height: 100%;
-            }
-
-            .swiper-button-prev {
-                top: 45%;
-                left: 0;
-                width: 35px;
-                height: 35px;
-            }
-
-            .swiper-button-next {
-                top: 57%;
-                left: 0;
-                width: 35px;
-                height: 35px;
-            }
-
-            .about_line {
-                width: 84vw;
-                overflow: hidden;
-            }
-
-            .about_title {
-                left: 29vw;
-                top: 35%;
-                font-size: var(--font-size-EngT1-M);
-
-                span {
-                    display: none;
-                }
-            }
-
-            .about_sub-title {
-                width: 60%;
-                left: 27vw;
-                top: 48%;
-
-                li {
-                    padding: 10px;
-                    display: flex;
-                    flex-direction: column;
-
-                }
-
-
-                &.Iam {
+                    left: 20%;
+                    top: 45%;
 
                     li {
-                        padding: 20px 0;
-                        white-space: wrap;
-                    }
-
-                    .num {
                         position: relative;
-
-                        h2 {
-                            position: absolute;
-                            top: -35px;
-                            left: -15px;
-                            font-family: var(--mainNum-font);
-                            font-size: var(--font-size-Num1-P);
-                            font-style: italic;
-                            font-weight: 700;
-                            opacity: .3;
-                            line-height: 1;
-                        }
-
-                        h3 {
-                            font-family: var(--mainKorM-font);
-                            font-size: var(--font-size-KorST3);
-                            line-height: 1.5;
-
-                            span {
-                                font-family: var(--mainEng-font);
-                                font-size: var(--font-size-KorST2);
-                                font-weight: 700;
-                                text-transform: capitalize;
-                            }
-                        }
-
-                        p {
-                            padding-left: 20px;
-                            font-family: var(--mainKorL-font);
-                            font-size: var(--font-size-KorST4);
-                            line-height: 1.5;
-                        }
-                    }
-                }
-
-                &.education {
-                    span {
-                        padding-left: 20px;
+                        font-family: var(--mainKorL-font);
+                        font-size: var(--font-size-KorST3);
+                        font-weight: 300;
                         line-height: 1.5;
-                    }
-                }
+                        // margin: 50px 0;
 
-
-                &.career {
-                    li {
-                        white-space: nowrap;
-
-                        span {
-                            padding: 0 90px;
-                            line-height: 1.5;
-                        }
-                    }
-                }
-
-                &.license {
-                    left: 25vw;
-
-                    li {
-                        display: inline-block;
-
-                        em {
-                            display: inline-block;
-                            width: 80px;
-                        }
-
-                        span {
-                            padding: 0;
-                        }
-                    }
-                }
-
-                &.skills {
-                    width: 40vw;
-                    display: flex;
-                    flex-wrap: wrap;
-                    gap: 10px;
-
-                    img {
-                        width: 55px;
-                        height: 55px;
-                        object-fit: cover;
-                    }
-
-                }
-            }
-        }
-
-    }
-
-}
-
-@media (min-width:768px) {
-    #about {
-        height: 100vh;
-        flex-direction: column;
-
-        .about_left {
-            display: none;
-        }
-
-        .about_right {
-            width: 90%;
-            height: 100vh;
-
-            .swiper-button-prev {
-                width: 50px;
-                height: 50px;
-                top: 40%;
-            }
-
-            .swiper-button-next {
-                width: 50px;
-                height: 50px;
-                top: 60%;
-            }
-
-            #aboutSwiper-box {
-                width: 80%;
-                margin-left: 80px;
-                height: 100%;
-            }
-
-            .swiper-button-next {
-                left: 0;
-            }
-
-            .swiper-button-prev {
-                left: 0;
-            }
-
-            .aboutSwiper {
-                .about_line {
-                    width: 70vw;
-                    overflow: hidden;
-
-                    .slidelineP {
-                        display: none;
-                    }
-                }
-            }
-
-            .about_title {
-                left: 200px;
-                top: 35%;
-                font-size: var(--font-size-EngT1-P);
-                white-space: nowrap;
-
-            }
-
-            .about_sub-title {
-                left: 200px;
-                top: 48%;
-
-                li {
-                    padding: 10px 0;
-                    line-height: 1.5;
-                }
-
-                &.Iam {
-
-                    li {
-                        padding: 20px 0;
-                        white-space: wrap;
-                    }
-
-                    .num {
-                        position: relative;
-
-                        h2 {
+                        .num{
                             position: absolute;
                             top: -35px;
                             left: -15px;
@@ -405,120 +158,28 @@
                             opacity: .3;
                             line-height: 1;
                         }
+                    }
 
-                        h3 {
-                            font-family: var(--mainKorM-font);
-                            font-size: var(--font-size-KorST2);
-                            line-height: 1.5;
-
-                            span {
-                                font-family: var(--mainEng-font);
-                                font-size: var(--font-size-KorST1);
-                                font-weight: 700;
-                                text-transform: capitalize;
-                            }
-                        }
-
-                        p {
-                            padding-left: 20px;
+                    &.skill{
+                        width: 400px;
+                        display: flex;
+                        flex-wrap: wrap;
+                        gap: 20px;
+                        border: 1px solid #000;
+    
+                        img {
+                            width: 60px;
+                            height: 60px;
+                            object-fit: cover;
                         }
                     }
                 }
 
-                &.career {
-                    span {
-                        padding-left: 15px;
-                    }
-                }
-
-                &.license {
-                    li {
-
-                        em {
-                            display: inline-block;
-                            width: 80px;
-                        }
-
-                        span {
-                            padding: 0;
-                        }
-                    }
-                }
-
-
-                &.skills {
-                    width: 350px;
-                    display: flex;
-                    flex-wrap: wrap;
-                    gap: 20px;
-
-                    img {
-                        width: 60px;
-                        height: 60px;
-                        object-fit: cover;
-                    }
-                }
-
-                &.education {
-
-                    li {
-                        white-space: nowrap;
-
-                        em {
-                            display: inline-block;
-                            width: 120px;
-                        }
-
-                    }
-
-                }
+            
             }
-        }
 
+
+        }
     }
-}
 
-@media (min-width:1024px) {
-    #about {
-        flex-direction: row;
-
-        .about_left {
-            display: block;
-            width: 45vw;
-
-            .about_photo {
-                width: 300px;
-                height: 400px;
-            }
-        }
-
-        .about_right {
-            width: 45%;
-            height: 100vh;
-
-            .swiper-button-prev {
-                width: 50px;
-                height: 50px;
-            }
-
-            .swiper-button-next {
-                width: 50px;
-                height: 50px;
-            }
-
-            .about_title {
-                top: 35%;
-            }
-
-            .about_sub-title {
-                top: 48%;
-
-                li {
-                    white-space: nowrap;
-                }
-
-            }
-        }
-
-    }
 }
