--- a/src/css/pages/scss/bubble.scss
+++ b/src/css/pages/scss/bubble.scss
@@ -18,6 +18,12 @@
     border-radius: 50%;
 }
 
+footer {
+    .bubble_cont {
+        height: 50vh;
+    }
+}
+
 /* bubble keyframes */
 @-webkit-keyframes animateBubble {
     0% {
