--- a/src/css/pages/scss/footer.scss
+++ b/src/css/pages/scss/footer.scss
@@ -1,3 +1,62 @@
-#footer{
+#footer {
+    position: relative;
+    overflow: hidden;
     height: 50vh;
+    border: 1px solid #0f0;
+
+    .stage {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        font-size: 2rem;
+        text-align: center;
+        white-space: nowrap;
+
+        .desc {
+            perspective: 400px;
+
+            div {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+        }
+    }
+
+    .splide {
+        position: absolute;
+        top: 0;
+        border: 1px solid #000;
+    }
+
+    .footer__splide__track {
+
+        .splide__list {
+            display: flex;
+
+            img {
+                width: 4vw;
+            }
+
+            .splide__slide {
+                color: #fff;
+                padding: 10px;
+                font-size: 2vw;
+                display: flex;
+                align-items: center;
+                flex-shrink: 0;
+                padding: 10px 20px;
+
+                &.is-active {
+                    color: rgb(255, 196, 0);
+                }
+            }
+        }
+    }
+
+
 }
