--- a/src/css/pages/scss/home.scss
+++ b/src/css/pages/scss/home.scss
@@ -1,4 +1,4 @@
-#intro {
+#home {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,7 +59,7 @@
 
 
 @media (max-width:767px) {
-    #intro {
+    #home {
         h2 {
             font-size: 2.5rem;
         }
@@ -71,7 +71,7 @@
 }
 
 @media (min-width:768px) {
-    #intro{
+    #home{
         h2 {
             font-size: 2.5rem;
         }
@@ -84,7 +84,7 @@
 }
 
 @media (min-width:1024px) {
-    #intro{
+    #home{
         h2 {
             font-size: 3.5rem;
         }
