--- a/src/css/pages/scss/uxui.scss
+++ b/src/css/pages/scss/uxui.scss
@@ -1,147 +1,115 @@
 #uxui {
 
 
-      .gallery-wrap {
-        max-width: 1200px;
-        margin: auto;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        gap: 3rem;
+
+  .uxui__wrap {
+    display: flex;
+    align-items: center;
+    width: 200%;
+    gap: 100px;
+    margin-top: 180px;
+    align-items: center;
+    padding-left: 120px;
+  }
+
+  article {
+
+    &.uxui__item {
+      position: relative;
+      max-width: 300px;
+      flex-shrink: 0;
+      // width: 28vw;
+      // aspect-ratio: 1/1;
+      color: #000;
+      cursor: pointer;
+
+      &:hover {
+        a {
+          &::after {
+            opacity: 1;
+          }
+        }
+
+        .desc-box {
+          opacity: 1;
+        }
+
+        img {
+          transform: scale(1.2);
+        }
+
+        .num {
+
+          em {
+            color: rgba(255, 255, 255, 1);
+          }
+        }
       }
-  
-      .gallery-wrap li {
-        position: relative;
-        cursor: pointer;
-  
-      }
-  
-      .gallery-wrap li:nth-child(even) {
-        margin-top: 50px;
-      }
-  
-      .item {
-        position: relative;
+
+      a {
+        display: inline-block;
         overflow: hidden;
-        max-width: 1000px;
-        aspect-ratio: 1/1;
+
+        &::after {
+          opacity: 0;
+          content: '';
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          left: 0;
+          top: 0;
+          background-color: rgba(0, 0, 0, .5);
+          transition: .5s;
+        }
+
       }
-  
-  
-      .item img {
+
+      img {
+        width: 100%;
+        transition: .35s;
+      }
+
+      .num {
+        position: absolute;
+        right: 10px;
+        top: -20px;
+        font-family: var(--mainNum-font);
+        font-size: 38px;
+        color: rgba(255, 255, 255, .5);
+        font-weight: 600;
+        z-index: 99;
+      }
+
+      .desc-box {
         position: absolute;
         left: 50%;
-        top: 0;
-        transform: translateX(-50%);
-        object-fit: cover;
-        // width: 100%;
-        height: 150%;
-        transition: .35s;
-        aspect-ratio: 1/1.5;
-  
-      }
-  
-      .item1 {
-        grid-row: 1;
-        grid-column: 1;
-      }
-  
-      .item2 {
-        grid-row: 1;
-        grid-column: 3;
-      }
-  
-      .item3 {
-        grid-row: 2;
-        grid-column: 2;
-      }
-  
-      .item4 {
-        grid-row: 3;
-        grid-column: 1;
-      }
-  
-      .item5 {
-        grid-row: 3;
-        grid-column: 3;
-      }
-  
-      .item6 {
-        grid-row: 4;
-        grid-column: 2;
-      }
-  
-      .item7 {
-        grid-row: 5;
-        grid-column: 1;
-      }
-
-      .item8 {
-        grid-row: 5;
-        grid-column: 3;
-      }
-
-      .item9 {
-        grid-row: 7;
-        grid-column: 2;
-      }
-
-      .item10 {
-        grid-row: 8;
-        grid-column: 1;
-      }
-
-      .item11 {
-        grid-row: 8;
-        grid-column: 3;
-      }
-
-      .item12 {
-        grid-row: 9;
-        grid-column: 2;
-      }
-
-      .item13 {
-        grid-row: 10;
-        grid-column: 1;
-      }
-  
-      /*------------------------------------------*/
-      .summary {
-        position: absolute;
-        color: #fff;
-        z-index: 99;
-        left: -40%;
-        bottom: 0;
-        opacity: 0;
-        transition: .35s;
-  
-      }
-  
-      .rtl .summary {
-        left: 50%
-      }
-  
-      li:hover .summary {
-        opacity: 1;
-      }
-  
-   
-      .summary h3 {
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+        text-align: center;
         white-space: nowrap;
-        line-height: .7;
+        // background-color: rgba(0,0,0,.5);
+        font-family: var(--mainEng-font);
         text-transform: capitalize;
-        font-weight: 900;
-        color: transparent;
-        -webkit-text-stroke: 1px #fff;
-        font-size: 4vw;
-  
+        color: #fff;
+        transition: .5s;
+        opacity: 0;
+        z-index: 50;
+
+        .item_title {
+          font-size: var(--font-size-EngT1-P);
+          font-weight: 500;
+        }
       }
-  
-      .summary p {
-        font-weight: normal;
-        font-size: 2vw;
-        margin-top: 20px;
-        border: 1px solid #000;
-      }
+
+    }
+  }
+
 }
