--- a/src/css/pages/scss/footer.scss
+++ b/src/css/pages/scss/footer.scss
@@ -2,7 +2,7 @@
     position: relative;
     overflow: hidden;
     height: 50vh;
-    border: 1px solid #0f0;
+    background: linear-gradient(to bottom,#4385AF, #024A7B, #003058);
 
     .stage {
         width: 100%;
