--- a/src/css/pages/uxui.css
+++ b/src/css/pages/uxui.css
@@ -4,7 +4,6 @@
   width: 200%;
   gap: 100px;
   margin-top: 180px;
-  align-items: center;
   padding-left: 120px;
 }
 #uxui article.uxui__item {
@@ -21,7 +20,7 @@
   opacity: 1;
 }
 #uxui article.uxui__item:hover img {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 #uxui article.uxui__item:hover .num em {
   color: rgb(255, 255, 255);
@@ -38,7 +37,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   transition: 0.5s;
 }
 #uxui article.uxui__item img {
@@ -77,7 +76,27 @@
   opacity: 0;
   z-index: 50;
 }
+#uxui article.uxui__item .desc-box .date {
+  font-size: 18px;
+}
+#uxui article.uxui__item .desc-box .desc {
+  font-size: 18px;
+}
 #uxui article.uxui__item .desc-box .item_title {
-  font-size: var(--font-size-EngT1-P);
+  position: relative;
+  font-size: 2rem;
   font-weight: 500;
+  text-transform: uppercase;
+  line-height: 1.2;
+  margin-bottom: 50px;
+}
+#uxui article.uxui__item .desc-box .item_title::after {
+  content: "";
+  width: 30px;
+  height: 1px;
+  position: absolute;
+  bottom: -25px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff;
 }
