--- a/src/css/pages/header.css
+++ b/src/css/pages/header.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 #header {
   position: fixed;
   left: 0;
@@ -5,7 +6,17 @@
   z-index: 999;
   width: 100%;
   font-family: var(--mainEng-font);
-  background-color: rgba(255, 255, 255, 0.1);
+}
+#header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(213, 239, 250, 0.2);
+  filter: blur(30px); /* 블러 필터 적용 */
+  z-index: -1; /* 배경만 뒤로 이동 */
 }
 #header .header_inner {
   display: flex;
@@ -44,16 +55,21 @@
 #header .header_inner .header_nav li a {
   text-transform: uppercase;
   font-size: 20px;
-  padding: 14px;
+  font-weight: 600;
+  padding: 15px;
   position: relative;
+  color: rgba(255, 255, 255, 0.8);
+}
+#header .header_inner .header_nav li a.on {
+  color: var(--white);
 }
 #header .header_inner .header_nav li a::before {
   content: "";
-  width: 100%;
-  height: 1px;
+  width: calc(100% - 20px);
+  height: 2px;
   background-color: var(--white);
   position: absolute;
-  left: 0;
+  left: 10px;
   bottom: 10px;
   transition: 0.35s;
   transform: scaleX(0);
