--- a/src/css/pages/scss/header.scss
+++ b/src/css/pages/scss/header.scss
@@ -5,7 +5,18 @@
     z-index: 999;
     width: 100%;
     font-family: var(--mainEng-font);
-    background-color: rgba(255,255,255,.1);
+   
+    &::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(213, 239, 250, 0.2); 
+        filter: blur(30px); /* 블러 필터 적용 */
+        z-index: -1; /* 배경만 뒤로 이동 */
+    }
 
     .header_inner {
         display: flex;
@@ -39,6 +50,7 @@
 
         .header_nav {
             margin-right: 50px;
+
             li {
                 display: inline-block;
                 font-family: var(--mainEng-font);
@@ -47,16 +59,22 @@
                 a {
                     text-transform: uppercase;
                     font-size: 20px;
-                    padding: 14px;
+                    font-weight: 600;
+                    padding: 15px;
                     position: relative;
+                    color: rgba(255,255,255,.8);
+
+                    &.on{
+                        color: var(--white);
+                    }
 
                     &::before {
                         content: '';
-                        width: 100%;
-                        height: 1px;
+                        width: calc(100% - 20px);
+                        height: 2px;
                         background-color: var(--white);
                         position: absolute;
-                        left: 0;
+                        left: 10px;
                         bottom: 10px;
                         transition: .35s;
                         transform: scaleX(0);
